name:                softfloat-hs
version:             0.1.0
synopsis:            Haskell bindings for SoftFloat
description:
  Provides a pure functional interface to John Hauser's SoftFloat, an implementation
  of IEEE floating point in the C programming language.
homepage:            https://github.com/GaloisInc/softfloat-hs
license:             BSD3
license-file:        LICENSE
author:              Ben Selfridge
maintainer:          benselfridge@galois.com
copyright:           March 2018
category:            Math
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     SoftFloat
                     , SoftFloat.Internal
  hs-source-dirs:      src
  include-dirs:        include
  install-includes:    softfloat_wrappers.h
  c-sources:           csrc/softfloat_wrappers.c
  ghc-options:         -Wall
  extra-libraries:     softfloat1
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

-- executable fpgen
--   hs-source-dirs:      test
--   main-is:             Fpgen.hs
--   ghc-options:         -threaded -Wall
--   default-language:    Haskell2010
--   build-depends:       base,
--                        softfloat-hs,
--                        parsec,
--                        directory,
--                        process

-- executable testfloat
--   hs-source-dirs:      test
--   main-is:             Testfloat.hs
--   other-modules:       Ops
--   ghc-options:         -threaded -Wall
--   default-language:    Haskell2010
--   build-depends:       base,
--                        softfloat-hs,
--                        split,
--                        process,
--                        optparse-applicative,
--                        random
